meeting the requirments version

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "task-cli": {
       "commandName": "Project",
-      "commandLineArgs": "update 1 \"work on project\""
+      "commandLineArgs": "update 1 \"work on projecttttt\""
     }
   }
 }
